--- a/project-backend/package.json
+++ b/project-backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_PATH=./build node build/app.js",
-    "build": "tsc -p .",
+    "build": "rm -rf build/ && tsc -p .",
     "dev": "nodemon src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
