--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,25 @@ version: '3.8'
 
 services:
   mysql:
-    image: "mysql:8.0"
+    image: 'mysql:8.0'
+    restart: always
     ports:
-      - "3308:3306"
+      - '3308:3306'
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: "password"
-      MYSQL_USER: "mysql"
-      MYSQL_PASSWORD: "password"
-      MYSQL_DATABASE: "db470"
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DB}
+
+  # admin interface for database
+  adminer:
+    depends_on:
+      - mysql
+    image: adminer
+    restart: always
+    ports:
+      - 9000:8080
 
   ts-node-express:
     build:
@@ -27,6 +37,3 @@ services:
     ports:
       - '5000:5000'
     command: npm run dev
-
-
-
