--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   mysql:
     image: 'mysql:8.0'
+    container_name: mysql_db
     restart: always
     ports:
       - '3308:3306'
@@ -18,6 +19,7 @@ services:
     depends_on:
       - mysql
     image: adminer
+    container_name: adminer-db-interface
     restart: always
     ports:
       - 9000:8080
