--- a/project-backend/package.json
+++ b/project-backend/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_PATH=./build node build/app.js",
     "build": "rm -rf build/ && tsc -p .",
     "dev": "nodemon src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +15,21 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "knex": "^0.95.14",
-    "mysql2": "^2.3.3"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "objection": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^27.0.3",
+    "@types/morgan": "^1.9.3",
+    "@types/supertest": "^2.0.11",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
