--- a/project-backend/package.json
+++ b/project-backend/package.json
@@ -17,17 +17,21 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http-errors": "^1.8.1",
     "knex": "^0.95.14",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "objection": "^3.0.0"
+    "objection": "^3.0.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
+    "@types/pug": "^2.0.5",
     "@types/supertest": "^2.0.11",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6",
