--- a/our-experience-app/package.json
+++ b/our-experience-app/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.1",
     "knex": "^0.95.14",
@@ -28,7 +30,9 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-flash": "0.0.37",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.3",
