--- a/our-experience-app/package.json
+++ b/our-experience-app/package.json
@@ -9,7 +9,8 @@
     "copyfiles": "copyfiles -e './src/node_modules/**/*' ./src/**/*.html ./src/**/*.css ./src/**/*.pug ./build",
     "start": "NODE_PATH=./build node build/app.js",
     "dev": "nodemon src/app.ts",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "knex": "^0.95.14",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "node-cas-authentication": "^0.0.15",
     "objection": "^3.0.0",
     "pug": "^3.0.2"
   },
@@ -41,6 +43,7 @@
     "@types/supertest": "^2.0.11",
     "copyfiles": "^2.4.1",
     "nodemon": "^2.0.15",
+    "patch-package": "^6.4.7",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
