added cas server via git submodule and update the docker compose file to properly build it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,15 @@ services:
     ports:
       - 9000:8080
 
+  cas:
+    build:
+      context: ./cas_auth
+      dockerfile: Dockerfile
+    depends_on:
+      - mysql
+    ports:
+      - "8443:8443"
+
   ts-node-express:
     build:
       context: ./our-experience-app
@@ -31,6 +40,7 @@ services:
       target: base
     depends_on:
       - mysql
+      - cas
     volumes:
       - ./our-experience-app/src:/home/node/app/src
     container_name: ts-node-express
@@ -39,3 +49,6 @@ services:
     ports:
       - '5000:5000'
     command: npm run dev
+    environment:
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
+
