--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     depends_on:
       - mysql
     ports:
-      - "8443:8443"
+      - '8443:8443'
 
   ts-node-express:
     build:
@@ -42,7 +42,7 @@ services:
       - mysql
       - cas
     volumes:
-      - ./our-experience-app/src:/home/node/app/src
+      - ./our-experience-app:/home/node/app
     container_name: ts-node-express
     expose:
       - '5000'
@@ -51,4 +51,3 @@ services:
     command: npm run dev
     environment:
       NODE_TLS_REJECT_UNAUTHORIZED: 0
-
