--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: mysql_db
     restart: always
     ports:
-      - '3307:3306'
+      - '3306:3306'
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
@@ -48,6 +48,8 @@ services:
       - '5000'
     ports:
       - '5000:5000'
-    command: npm run dev
+      # 'npm', 'run', 'dev', '&&', './node_modules/.bin/knex migrate:latest', '&&', './node_modules/.bin/knex seed:run']
+    command: ./wait.sh mysql:3006 -- npm run dev
+    #['./wait.sh', 'mysql:3006', '--', 'npm', 'run', 'dev']
     environment:
       NODE_TLS_REJECT_UNAUTHORIZED: 0
