--- a/our-experience-app/package.json
+++ b/our-experience-app/package.json
@@ -8,7 +8,8 @@
     "build": "npm run clean && tsc -p . && npm run copyfiles",
     "copyfiles": "copyfiles -e './src/node_modules/**/*' ./src/**/*.html ./src/**/*.css ./src/**/*.pug ./build",
     "start": "NODE_PATH=./build node build/app.js",
-    "dev": "nodemon src/app.ts",
+    "migrateSeed": "./node_modules/.bin/knex migrate:latest && ./node_modules/.bin/knex seed:run",
+    "dev": "nodemon src/app.ts && npm run migrateSeed",
     "test": "jest",
     "postinstall": "patch-package"
   },
