--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,3 +51,5 @@ services:
     command: npm run dev
     environment:
       NODE_TLS_REJECT_UNAUTHORIZED: 0
+      CAS_DEV_MODE: ${CAS_DEV_MODE}
+      CAS_DEV_USER: ${CAS_DEV_USER}
