--- a/our-experience-app/package.json
+++ b/our-experience-app/package.json
@@ -24,6 +24,7 @@
     "helmet": "^4.6.0",
     "http-errors": "^1.8.1",
     "knex": "^0.95.14",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
@@ -39,6 +40,7 @@
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.3",
+    "@types/moment": "^2.13.0",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/pug": "^2.0.5",
