--- a/our-experience-app/.env
+++ b/our-experience-app/.env
@@ -5,5 +5,5 @@ MYSQL_USER=mysql
 MYSQL_PASSWORD=password
 MYSQL_DB=db470
 SESSION_SECRET=💀secret💀
-CAS_DEV_MODE=true
+CAS_DEV_MODE=false
 CAS_DEV_USER=dev_user
